--- a/JUDYSOFT/FormIngresarNuevoEmpleado.resx
+++ b/JUDYSOFT/FormIngresarNuevoEmpleado.resx
@@ -118,6 +118,44 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAB3FJREFUWEetV2lslFUUvS1B2kKpbNpCqV0B2bcqLYS2oqCouFQBBVkqWxsErSxF
+        6xIFtx9GTVwSQyQYTURR3IKoSRFJMQotXWamywydbjNQggooCphez3nfN2WmlC16k5uZ+b73zjnvvvvu
+        uyOXawtFIh8SGbNAZBm+b10s4sgTOYXPNvwumSfy8myRu+4UScDwcGvW/2AAj4PnF/eJbngnZZB+MWGY
+        luaMV8fMDPXcNdV88jef8z3Gtc8V+XSWyC1DRHrYMFduXDF83guxff07xg/V2jsytSE3Rxvnz9Tm5bO1
+        9bHF6lu/wnzyN5/zPcdxPObp/SJf3CySDrgri8gikfg10VFbPhyZbAC9c6dryyMPqa8o/5LOcRzPeZy/
+        qlfksRkiSwF7edEAeeoz/WL2fjNphFlRc/4DXRJdyjmP84nzVL+YM9NFngV8lMVyAePKSb4na5x659zS
+        JfCVOqPxY/Z4ijibI1IMmgiLrZNxzxl2Ku5M7t+A0K5bri1rl6s/6HlXbsbBg595H7zVRGJlr8gTE0Xm
+        g66bxRpkTDjuGcMWPNm/oUBbH1+iFU8WalXxGvWtXdqlCCOy8GGteX6Dep8pVP+aJSHviUt8HFNXb5Gh
+        Nq1lII9jtjNxgvfcIn9Yy1Yv1cMH9uvhqgqteOIxI8iI4CnAav1FPA15Wr7hUT3a1KRnKvarD885LoBF
+        XOLzdEwSeRu0PS12GATk8+hwvzrI4QQgecu+Ug1YM4RUgMiHFfohgOQthXl6EM8OO6rtUap//rwXAoGx
+        dlkHJvHJgxrhBe2oAHkkiwzVBY4aybnf5Vit78AvNuQ5az1YbkQcIThElhetDiFvb283n3/XOtT/NMSa
+        nCgw+OQBn14vsgn0VwnLKytY8N5TQDPAa58r0vY2nwHrbP7KCj2wdqWWwdtqauynlln0qqcO/KS+4lW2
+        AAubPOSbIlIKAXHC2s4yykoWGBTwI+uXadtrG/V0Y4MNGWpH6+v1mMdt/7IssPo/9nxntjB4C+jkId9M
+        kUYISOcWbGUtb1p8d8hA40wyZHbb65v0dLPXAF/UOsi/NznCBG7FqfGtPxcBlm3yoUwfh4Bc4a3GC8Wd
+        PVJbVi/sIOZnK4/SumVGxNE3XtAzLY2GoEuzyU+W7NTmgge1ecUc49x3gxMQgNNAPmz9GQhYJbxSeatV
+        x4nWZaRqUx4iQQFc/aOLtWlprjaikLhmTVFXYb6ebqg3RF3Zid271HP7JD00a7LJeEa1ueABc0SJR+y6
+        jBRzi4K3HQI2MgJtVOQY3N2IcA27Wt3TxkD9XERkkXXTLbhDG+7J0p0JserZ+ZVNd741fPS+lib0U8+M
+        iSbZOI/zKcRzW7rBJo8dgbMQ8BJzoIR74kyNNgIC7kztpe6s4dpwb5ZZTQXqed0H79lUFzbP5rf04Nhk
+        PXQn+oWZN5gVO5N7BuFGmxy4T+QkBBQJOxlmZc3o2BABdMdA0cp+orsG9lHX1ne1/Z+zNs1FDLnghogf
+        Y3tqVf9QPDp5yHeriA8CFgjbKJ7Lusy0kIFOkl8tun1AjDp3bLfRQ+2PfT/oqYPnFyqa+8MtuntAhFYO
+        wEKCcMlDvhuR/BCQLezh2Ea5po1TR2KEGcQJ5VD/WVq8Hirda0OG2vGvt2M112rd5DT9c/8++2moeb/6
+        TCuTsLXXWOTEJw8rYZLI9xCQApdw9nCm7Rof36G0ApN2JfZX745tNtw5+/3Lbeoa0V+r+lhRqs8ebqpe
+        Z/v1zRfVkRCpVddamMQnz+1IfPA+B7caFDaQvKWcOaNDEqYaUfg5NlJ/27bFhgT5J1uRzX20qi/ex8IB
+        ThHuaaP1L9yCAWt7pdg8r7JXT1zik2e0SBlopxlyGrtXNpC8r1kLOgTYIqoHR+uJbz/Hyj8GEELKfY0P
+        x5EKM149KEyrkKyHbrtBT3vdpnJWxoSHJCFxiY/+8DCaw1dB299it43dKxtIdi61ExJCRcSFmVXXIOyO
+        xB5ak9Jda9LCtTYtDN/hSWHqTOyuzpSeWpueoK4hMRDVDR5u5hOPuAW9Iv/Cpu8BHe6i8y2c3SsbyJKM
+        TiIGhqszKQJnOAqE3bR2KPZ9hOV1w3G00lDAEhHmJIhIi0aUohAhCDDkg7Ukc6QW9435Z6xIJXhQ+yTS
+        MHZhPdi9soGkYoYtkBOOeIuEZCR2jxP1TMD3sRBxPd4lw6+DWIzjeM7jfOKQHL2gC/jr4NcYpotYFLtX
+        NpDcMyYOV+FIwRGCgLphIB2D/U6H32iJqBsJYamWAI5jtnMe5zPs9spJPsgwXIZFsHtlA8ms5dFxob57
+        kOmeqUPUk4n6kBFjCZjUW90Zg7R+crK6bxqlrukTO/4ZMeHsPWfYL7nyztaN3SsbSPZw+L+gm0ck6bfZ
+        6Vo2e4Z6luRqC65dT969WpZ7s34zdYJuHpaoT2MczzmPmp3tTLgL7vnlGLvXUcPRw2WhjbobnQyWc3wV
+        7vM1uFIfwa2GruokouXLRHm1KxyLDM956FH7j3YVPA7OP5u5cGjAfc4rlbcaLxbWdqu8XvwvWIeJ/Avz
+        C7AxWuTi8wAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAoIAQAZgAAABAQAAABACAAaAQAAI4gBAAwMAAAAQAgAKglAAD2JAQAICAAAAEA
