--- a/JUDYSOFT/Properties/Resources.resx
+++ b/JUDYSOFT/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="1484548483_Edit_page" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484548483_Edit_page.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1484546293_Save1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\1484546293_Save.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="1484546297_Cancel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484546297_Cancel.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -130,7 +133,7 @@
   <data name="1484548508_Pencil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484548508_Pencil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="1484546293_Save1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\1484546293_Save.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1484546334_Apply" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\1484546334_Apply.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
