--- a/JUDYSOFT/Properties/Resources.resx
+++ b/JUDYSOFT/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="1484546293_Save1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484546293_Save.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1484548508_Pencil1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\1484548508_Pencil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="1484548483_Edit_page" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484548483_Edit_page.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -140,6 +143,9 @@
     <value>..\Images\1484546297_Cancel.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="1484546336_Back" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\1484546336_Back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1484546336_Back1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\1484546336_Back.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
